--- a/pipelines.yml
+++ b/pipelines.yml
@@ -21,4 +21,14 @@ pipelines:
         execution:
           onExecute:
             - sleep 10
+  - name: testPipeline2
+    steps:
+      - name: bashTest
+        type: Bash
+        configuration:
+          inputResources:
+            - name: res1
+        execution:
+          onExecute:
+            - sleep 10
            
