--- a/pipelines.yml
+++ b/pipelines.yml
@@ -56,7 +56,7 @@ resources:
       gitProvider: GitIntegration
       path: aarvyved/testpipe
 pipelines:
-  - name: testPipeline2
+  - name: largePipeline
     steps:
       - name: step1
         type: Bash
@@ -65,8 +65,6 @@ pipelines:
             - name: in1
           outputResources:
             - name: out1
-#             - name: out2
-#             - name: out3
         execution:
           onExecute:
             - sleep 10
@@ -75,8 +73,6 @@ pipelines:
         configuration:
           inputResources:
             - name: out1
-#           outputResources:
-#             - name: out2
         execution:
           onExecute:
             - sleep 10
@@ -86,8 +82,6 @@ pipelines:
         configuration:
           inputResources:
             - name: out1
-#           outputResources:
-#             - name: out2
         execution:
           onExecute:
             - sleep 10
@@ -97,171 +91,7 @@ pipelines:
         configuration:
           inputResources:
             - name: out1
-#           outputResources:
-#             - name: out2
         execution:
           onExecute:
             - sleep 10
             - echo "done"
-            
-#       - name: bashTest3
-#         type: Bash
-#         configuration:
-#           inputResources:
-#             - name: out2
-#         execution:
-#           onExecute:
-#             - sleep 10
-#             - echo "done"
-           
-
-# resources:
-#   - name: prop1
-#     type: PropertyBag
-#     configuration:
-#       key1: value1
-#       key2: value2
-#   - name: git
-#     type: GitRepo
-#     configuration:
-#       gitProvider: GitIntegration
-#       path: aarvyved/runpoptest
-#   - name: git_IN
-#     type: GitRepo
-#     configuration:
-#       gitProvider: GitIntegration
-#       path: aarvyved/runpoptest
-#   - name: git_SANDWICH
-#     type: GitRepo
-#     configuration:
-#       gitProvider: GitIntegration
-#       path: aarvyved/runpoptest
-#   - name: git_OUT_1
-#     type: GitRepo
-#     configuration:
-#       gitProvider: GitIntegration
-#       path: aarvyved/runpoptest
-#   - name: git_OUT_2
-#     type: GitRepo
-#     configuration:
-#       gitProvider: GitIntegration
-#       path: aarvyved/runpoptest
-#   - name: git_OUT_3
-#     type: GitRepo
-#     configuration:
-#       gitProvider: GitIntegration
-#       path: aarvyved/runpoptest
-#   - name: git_OUT_4
-#     type: GitRepo
-#     configuration:
-#       gitProvider: GitIntegration
-#       path: aarvyved/runpoptest
-#   - name: git_OUT_5
-#     type: GitRepo
-#     configuration:
-#       gitProvider: GitIntegration
-#       path: aarvyved/runpoptest
-# pipelines: 
-#   - name: TRIGGER
-#     steps:
-#       - name: TRIGGER
-#         type: Bash
-#         configuration:
-#           outputResources:
-#             - name: prop1
-#         execution:
-#           onExecute:
-#             - write_output prop1 runId=$run_number
-#   - name: TRIGGER_OUT_1
-#     steps:
-#       - name: TRIGGER_OUT_1
-#         type: Bash
-#         configuration:
-#           inputResources:
-#             - name: prop1
-#         execution:
-#           onExecute:
-#             - printenv
-#   - name: TRIGGER_OUT_2
-#     steps:
-#       - name: TRIGGER_OUT_2
-#         type: Bash
-#         configuration:
-#           inputResources:
-#             - name: prop1
-#         execution:
-#           onExecute:
-#             - printenv
-#   - name: IN
-#     steps:
-#       - name: IN_TEST
-#         type: Bash
-#         configuration:
-#           outputResources:
-#             - name: git_IN
-#             - name: git_SANDWICH
-#           inputResources:
-#             - name: git
-#         execution:
-#             onExecute:
-#               - sleep 10
-#               - echo "done"
-#       - name: IN_TEST_OUT
-#         type: Bash
-#         configuration:
-#           inputResources:
-#             - name: git_SANDWICH
-#               trigger: false
-#           inputSteps:
-#             - name: IN_TEST
-#           outputResources:
-#             - name: git_OUT_5
-#         execution:
-#           onExecute:
-#             - sleep 10
-#             - echo "done"
-#       - name: trigger
-#         type: Bash
-#         configuration:
-#           inputResources:
-#             - name: git_OUT_5
-#           outputResources:
-#             - name: git_OUT_1
-#         execution:
-#           onExecute:
-#             - sleep 60
-#             - echo "done"
-#       - name: trigger_1
-#         type: Bash
-#         configuration:
-#           inputResources:
-#             - name: git_OUT_1
-#           outputResources:
-#             - name: git_OUT_2
-#         execution:
-#           onExecute:
-#             - sleep 60
-#             - echo "done"
-#       - name: trigger_2
-#         type: Bash
-#         configuration:
-#           inputResources:
-#             - name: git_OUT_2
-#           outputResources:
-#             - name: git_OUT_3
-#         execution:
-#           onExecute:
-#             - sleep 60
-#             - echo "done"
-#       - name: trigger_3
-#         type: Bash
-#         configuration:
-#           inputResources:
-#             - name: git_OUT_3
-#           outputResources:
-#             - name: git_OUT_4
-#         execution:
-#           onExecute:
-#             - sleep 60
-#             - echo "done"
-
