--- a/pipelines.yml
+++ b/pipelines.yml
@@ -110,7 +110,9 @@ pipelines:
         type: Bash
         configuration:
           inputResources:
-            - name: out2
+            - name: out1
+          outputResources:
+            - name: out3
         execution:
           onExecute:
             - sleep 10
@@ -129,6 +131,24 @@ pipelines:
         configuration:
           inputResources:
             - name: out2
+        execution:
+          onExecute:
+            - sleep 10
+            - echo "done"
+      - name: step9
+        type: Bash
+        configuration:
+          inputResources:
+            - name: out2
+        execution:
+          onExecute:
+            - sleep 10
+            - echo "done"
+      - name: step10
+        type: Bash
+        configuration:
+          inputResources:
+            - name: out3
         execution:
           onExecute:
             - sleep 10
