--- a/pipelines.yml
+++ b/pipelines.yml
@@ -144,3 +144,18 @@ pipelines:
           onExecute:
             - sleep 10
             - echo "done"
+
+  - name: withSteplets
+    steps:
+      - name: step1
+        type: Matrix
+        stepletMultipliers:
+          environmentVariables:
+            - steplet: 1
+            - steplet: 2
+            - steplet: 3
+            - steplet: 4
+        execution:
+          onExecute:
+            - sleep 5
+            - echo "done"
