--- a/pipelines.yml
+++ b/pipelines.yml
@@ -173,6 +173,8 @@ pipelines:
       - name: step1
         type: Bash
         configuration:
+          inputResources:
+          - name:cronIn1
           outputResources:
             - name: buildOut1
         execution:
