--- a/pipelines.10a.yml
+++ b/pipelines.10a.yml
@@ -17,6 +17,8 @@ pipelines:
       - name: canvasTest_Root10a
         type: Bash
         configuration:
+          inputResources:
+            - name: propertyCanvas10a
         execution:
           onExecute:
             - sleep 1
