Update and rename pipelines.5.yml to pipelines.5a.yml

--- a/pipelines.5a.yml
+++ b/pipelines.5a.yml
@@ -51,6 +51,7 @@ pipelines:
       - name: Test3_1_3_1
         type: Bash
         configuration:
+          affinityGroup: together
           inputResources:
             - name: propertyCanvas3
             - name: buildInfoTrigger3
@@ -75,6 +76,7 @@ pipelines:
       - name: Test3_1_5_1
         type: Bash
         configuration:
+            affinityGroup: together
             inputResources:
             - name: propertyCanvas3
             - name: buildInfoTrigger3
